--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@ layout: default
 
 <div>
 
-  These notes accompany the Stanford CS class <a href="http://cs231n.stanford.edu/">CS231n: Convolutional Neural Networks for Visual Recognition</a>. 
+  These notes accompany the PUC Minas class <a href="www.icei.pucminas.br/professores/zenilton/introduction-to-deep-learning-2018/">I2DL: Introduction to Deep Learning</a>. 
   <br>
-  For questions/concerns/bug reports contact <a href="http://cs.stanford.edu/people/jcjohns/">Justin Johnson</a> regarding the assignments, or contact <a href="http://cs.stanford.edu/people/karpathy/">Andrej Karpathy</a> regarding the course notes. You can also submit a pull request directly to our <a href="https://github.com/cs231n/cs231n.github.io">git repo</a>.
-  <br>
+<!--  For questions/concerns/bug reports contact <a href="http://cs.stanford.edu/people/jcjohns/">Justin Johnson</a> regarding the assignments, or contact <a href="http://cs.stanford.edu/people/karpathy/">Andrej Karpathy</a> regarding the course notes. You can also submit a pull request directly to our <a href="https://github.com/cs231n/cs231n.github.io">git repo</a>.
+  <br> 
   We encourage the use of the <a href="https://hypothes.is/">hypothes.is</a> extension to annote comments and discuss these notes inline.
+-->
 </div>
 
 <div class="home">
   <div class="materials-wrap">
-    <div class="module-header">Spring 2018 Assignments</div>
+    <div class="module-header">2018 Assignments</div>
 
     <div class="materials-item">
-      <a href="assignments2018/assignment1/">
+      <a href="TP1/">
         Assignment #1: Image Classification, kNN, SVM, Softmax, Neural Network
       </a>
     </div>
 
     <div class="materials-item">
-      <a href="assignments2018/assignment2/">
+      <a href="TP2/">
         Assignment #2: Fully-Connected Nets, Batch Normalization, Dropout,
         Convolutional Nets
       </a>
@@ -74,7 +75,7 @@ layout: default
       </a>
     </div>
   -->
-
+<!--
     <div class="module-header">Module 0: Preparation</div>
 
     <div class="materials-item">
@@ -94,6 +95,7 @@ layout: default
         IPython Notebook Tutorial
       </a>
     </div>
+-->
 <!--
     <div class="materials-item">
       <a href="terminal-tutorial/">
@@ -101,6 +103,7 @@ layout: default
       </a>
     </div>
 -->
+<!--	  
     <div class="materials-item">
       <a href="gce-tutorial/">
         Google Cloud Tutorial
@@ -111,9 +114,9 @@ layout: default
         AWS Tutorial
       </a>
     </div>
-
+-->
 	 <!-- hardcoding items here to force a specific order -->
-    <div class="module-header">Module 1: Neural Networks</div>
+    <div class="module-header">CS231n Notes on Neural Networks</div>
 
     <div class="materials-item">
       <a href="classification/">
@@ -187,7 +190,7 @@ layout: default
       </div>
     </div>
 
-    <div class="module-header">Module 2: Convolutional Neural Networks</div>
+    <div class="module-header">CS231n Notes on Convolutional Neural Networks</div>
 
     <div class="materials-item">
       <a href="convolutional-networks/">
