--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@ layout: default
     </div>
 
     <div class="materials-item">
-      <a href="TP2/">
+<!--      <a href="TP2/">  -->
         Assignment #2: Fully-Connected Nets, Batch Normalization, Dropout,
         Convolutional Nets
-      </a>
+<!--      </a>  -->
     </div>
-	  <!---->
-    <!--<div class="materials-item">-->
-      <!--<a href="assignments2018/assignment3/">-->
-        <!--Assignment #3: Image Captioning with Vanilla RNNs, Image Captioning -->
-	<!--with LSTMs, Network Visualization, Style Transfer, Generative Adversarial Networks-->
+	  
+    <div class="materials-item">
+      <!--<a href="TP3/">-->
+        Assignment #3: Image Captioning with Vanilla RNNs, Image Captioning 
+	with LSTMs, Network Visualization, Style Transfer, Generative Adversarial Networks
       <!--</a>-->
-    <!--</div>-->
+    </div>
 	  
     <!--
     <div class="module-header">Winter 2016 Assignments</div>
@@ -116,7 +116,7 @@ layout: default
     </div>
 -->
 	 <!-- hardcoding items here to force a specific order -->
-    <div class="module-header">CS231n Notes on Neural Networks</div>
+    <div class="module-header">Additional Notes from Stanford CS231 on Neural Networks</div>
 
     <div class="materials-item">
       <a href="classification/">
@@ -135,7 +135,7 @@ layout: default
         parameteric approach, bias trick, hinge loss, cross-entropy loss, L2 regularization, web demo
       </div>
     </div>
-
+<!--
     <div class="materials-item">
       <a href="optimization-1/">
         Optimization: Stochastic Gradient Descent
@@ -190,7 +190,7 @@ layout: default
       </div>
     </div>
 
-    <div class="module-header">CS231n Notes on Convolutional Neural Networks</div>
+    <div class="module-header">Additional Notes from Stanford CS231 on Convolutional Neural Networks</div>
 
     <div class="materials-item">
       <a href="convolutional-networks/">
@@ -215,6 +215,6 @@ layout: default
         Transfer Learning and Fine-tuning Convolutional Neural Networks
       </a>
     </div>
- 
+ -->
   </div>
 </div>
