--- a/index.html
+++ b/index.html
@@ -19,23 +19,25 @@ layout: default
     <div class="materials-item">
       <a href="TP1/">
         Assignment #1: Image Classification, kNN, SVM, Softmax, Neural Network
-      </a>
+      </a> (in portuguese)
     </div>
 
     <div class="materials-item">
 <!--      <a href="TP2/">  -->
         Assignment #2: Fully-Connected Nets, Batch Normalization, Dropout,
         Convolutional Nets
-<!--      </a>  -->
+<!--      </a>  --> (in portuguese)
     </div>
 	  
     <div class="materials-item">
       <!--<a href="TP3/">-->
         Assignment #3: Image Captioning with Vanilla RNNs, Image Captioning 
 	with LSTMs, Network Visualization, Style Transfer, Generative Adversarial Networks
-      <!--</a>-->
+      <!--</a>--> (in portuguese)
     </div>
-	  
+   <div>
+   <br>
+  </div>
     <!--
     <div class="module-header">Winter 2016 Assignments</div>
     <div class="materials-item">
