--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@ layout: default
 
     <div class="materials-item">
       <a href="TP1/">
-        Assignment #1: Image Classification, kNN, SVM, Softmax, Neural Network
-      </a> (in portuguese)
+        Assignment #1: Image Classification, kNN, SVM, Softmax, Neural Network (in portuguese)
+      </a>
     </div>
 
     <div class="materials-item">
 <!--      <a href="TP2/">  -->
         Assignment #2: Fully-Connected Nets, Batch Normalization, Dropout,
-        Convolutional Nets
-<!--      </a>  --> (in portuguese)
+        Convolutional Nets (in portuguese)
+<!--      </a>  -->
     </div>
 	  
     <div class="materials-item">
       <!--<a href="TP3/">-->
         Assignment #3: Image Captioning with Vanilla RNNs, Image Captioning 
-	with LSTMs, Network Visualization, Style Transfer, Generative Adversarial Networks
-      <!--</a>--> (in portuguese)
+	with LSTMs, Network Visualization, Style Transfer, Generative Adversarial Networks (in portuguese)
+      <!--</a>-->
     </div>
    <div>
    <br>
