--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@ layout: default
     <div class="materials-item">
 <!--      <a href="TP2/">  -->
         Assignment #2: Fully-Connected Nets, Batch Normalization, Dropout,
-        Convolutional Nets (in portuguese)
+        Convolutional Nets (not yet available)
 <!--      </a>  -->
     </div>
 	  
     <div class="materials-item">
       <!--<a href="TP3/">-->
         Assignment #3: Image Captioning with Vanilla RNNs, Image Captioning 
-	with LSTMs, Network Visualization, Style Transfer, Generative Adversarial Networks (in portuguese)
+	with LSTMs, Network Visualization, Style Transfer, Generative Adversarial Networks (not yet available)
       <!--</a>-->
     </div>
    <div>
