--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div>
 
-  These notes accompany the PUC Minas class <a href="www.icei.pucminas.br/professores/zenilton/introduction-to-deep-learning-2018/">I2DL: Introduction to Deep Learning</a>. 
+  These notes accompany the PUC Minas class <a href="http://www.icei.pucminas.br/professores/zenilton/introduction-to-deep-learning-2018/">I2DL: Introduction to Deep Learning</a>. 
   <br>
 <!--  For questions/concerns/bug reports contact <a href="http://cs.stanford.edu/people/jcjohns/">Justin Johnson</a> regarding the assignments, or contact <a href="http://cs.stanford.edu/people/karpathy/">Andrej Karpathy</a> regarding the course notes. You can also submit a pull request directly to our <a href="https://github.com/cs231n/cs231n.github.io">git repo</a>.
   <br> 
@@ -23,10 +23,10 @@ layout: default
     </div>
 
     <div class="materials-item">
-<!--      <a href="TP2/">  -->
+      <a href="TP2/">
         Assignment #2: Fully-Connected Nets, Batch Normalization, Dropout,
-        Convolutional Nets (not yet available)
-<!--      </a>  -->
+        Convolutional Nets (in portuguese)
+      </a>
     </div>
 	  
     <div class="materials-item">
