--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@ layout: default
 	with LSTMs, Network Visualization, Style Transfer, Generative Adversarial Networks (not yet available)
       <!--</a>-->
     </div>
-   <div>
+    <div class="materials-item">
+      <a href="submission/">
+        Submission instructions (in portuguese)
+      </a>
+    </div>
+  <div>
    <br>
   </div>
     <!--
